--- a/games/index.html
+++ b/games/index.html
@@ -44,13 +44,13 @@
             <li><a href="../index.html#about-us">about us</a></li>
             <li class="drop-down-btn">Pages <i class="fas fa-chevron-down"></i>
               <ul>
-                <li><a href="../games/index.html">Games</a></li>
+                <li><a href="#">Games</a></li>
                 <li><a href="../faq/index.html">faq	</a></li>
                 <li><a href="../terms/index.html">terms &amp; conditions</a></li>
               </ul>
             </li>
             <li><a href="../index.html#contact">Contact</a></li>
-            <li> <a href="#">Join Now </a></li>
+            <li> <a class="special-btn" href="#">Join Now </a></li>
           </ul>
           <div class="burger-toggler icon"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div>
         </div>
