--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head><meta charset="UTF-8">
-<meta name="description" content="We Sale Games So Invite Your Friens And Get Fun With It Win Rewards">
-<meta name="keywords" content="ExGames, Games, Exstream Games, Exgames Home">
-<meta name="author" content="Yusuf & Mokhtar & Hager & Hadeer">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="We Sale Games So Invite Your Friens And Get Fun With It Win Rewards">
+    <meta name="keywords" content="ExGames, Games, Exstream Games, Exgames Home">
+    <meta name="author" content="Yusuf Azzam">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XGAMES</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="./fontawesome/css/all.min.css">
@@ -21,12 +22,12 @@
           <div class="right-box"> 
             <div class="lang"> 
               <ul>
-                <li class="drop-down-btn"><img src="../includes/images/w1.png" alt="flag">English<i class="fas fa-chevron-down"></i>
+                <li class="drop-down-btn"><img src="includes/images/w1.png" alt="flag">English<i class="fas fa-chevron-down"></i>
                   <ul>
-                    <li><a href=""><img src="../includes/images/w2.png" alt="flag">Deutsch</a></li>
-                    <li><a href=""><img src="../includes/images/w3.png" alt="flag">Español</a></li>
-                    <li><a href=""><img src="../includes/images/w4.png" alt="flag">Français</a></li>
-                    <li><a href=""><img src="../includes/images/w5.png" alt="flag">العربية</a></li>
+                    <li><a href=""><img src="includes/images/w2.png" alt="flag">Deutsch</a></li>
+                    <li><a href=""><img src="includes/images/w3.png" alt="flag">Español</a></li>
+                    <li><a href=""><img src="includes/images/w4.png" alt="flag">Français</a></li>
+                    <li><a href=""><img src="includes/images/w5.png" alt="flag">العربية</a></li>
                   </ul>
                 </li>
               </ul>
@@ -40,17 +41,17 @@
           <div class="logo"><a href=""> 
               <h2> <span>X</span>Games</h2></a></div>
           <ul class="main-lists">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../index.html#about-us">about us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#about-us">about us</a></li>
             <li class="drop-down-btn">Pages <i class="fas fa-chevron-down"></i>
               <ul>
-                <li><a href="../games/index.html">Games</a></li>
-                <li><a href="../faq/index.html">faq	</a></li>
-                <li><a href="../terms/index.html">terms &amp; conditions</a></li>
+                <li><a href="games/index.html">Games</a></li>
+                <li><a href="faq/index.html">faq	</a></li>
+                <li><a href="terms/index.html">terms &amp; conditions</a></li>
               </ul>
             </li>
             <li><a href="#contact">Contact</a></li>
-            <li> <a href="#">Join Now </a></li>
+            <li> <a class="special-btn" href="#">Join Now </a></li>
           </ul>
           <div class="burger-toggler icon"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div>
         </div>
@@ -60,7 +61,7 @@
       <div class="container"> 
         <div class="content-box"> 
           <h1 data-aos="fade-right">Buy More Games <span>Get More Fun</span></h1>
-          <p data-aos="fade-up">We Provides For You the best games for your enjoyment, buy, play, and win.</p><a href="">Get Started </a>
+          <p data-aos="fade-up">We Provides For You the best games for your enjoyment, buy, play, and win.</p><a class="special-btn" href="">Get Started </a>
         </div>
         <div class="image-box" data-aos="zoom-in"><img src="./images/s1.png" alt=""></div>
       </div>
@@ -154,23 +155,23 @@
           <h2>Games</h2>
           <p>Log in now and buy the games you want, and don't forget to have fun with your friends.</p>
         </div>
-        <div class="content"> <a href="" data-aos="fade-right"> 
+        <div class="content"> <a href="game-page/index.html#pubg" data-aos="fade-right"> 
             <div class="box"> 
-              <div class="img-box"><img src="./games/images/pubg1.jpg" alt="Game Image"></div>
+              <div class="img-box"><img src="./games/images/pubg.jpg" alt="Game Image"></div>
               <div class="text-box"> 
                 <h4>Pubg</h4>
                 <p>Player Unknown's Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole.</p>
               </div>
-            </div></a><a href="" data-aos="zoom-in"> 
+            </div></a><a href="game-page/index.html#freefire" data-aos="zoom-in"> 
             <div class="box"> 
               <div class="img-box"><img src="./games/images/freefire.jpg" alt="Game Image"></div>
               <div class="text-box"> 
                 <h4>Free Fire</h4>
                 <p>Game play. Garena Free Fire is an online-only action-adventure battle royale game played in a third person perspective.</p>
               </div>
-            </div></a><a href="" data-aos="fade-left"> 
+            </div></a><a href="game-page/index.html#callofduty" data-aos="fade-left"> 
             <div class="box"> 
-              <div class="img-box"><img src="./games/images/call-of-duty.jpg" alt="Game Image"></div>
+              <div class="img-box"><img src="./games/images/callofduty.jpg" alt="Game Image"></div>
               <div class="text-box"> 
                 <h4>Call of Duty</h4>
                 <p>Call Of Duty (short form: CoD) is a first person and third-person shooter video game series. There are 24 games in total, not counting add-ons and DLCs. The first 8 games, excluding Modern Warfare.</p>
