--- a/terms/index.html
+++ b/terms/index.html
@@ -46,11 +46,11 @@
               <ul>
                 <li><a href="../games/index.html">Games</a></li>
                 <li><a href="../faq/index.html">faq	</a></li>
-                <li><a href="../terms/index.html">terms &amp; conditions</a></li>
+                <li><a href="#">terms &amp; conditions</a></li>
               </ul>
             </li>
             <li><a href="../index.html#contact">Contact</a></li>
-            <li> <a href="#">Join Now </a></li>
+            <li> <a class="special-btn" href="#">Join Now </a></li>
           </ul>
           <div class="burger-toggler icon"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div>
         </div>
