--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <nav>
         <div class="container"> 
-          <div class="logo"><a href=""> 
+          <div class="logo"><a href="#"> 
               <h2> <span>X</span>Games</h2></a></div>
           <ul class="main-lists">
             <li><a href="index.html">Home</a></li>
