--- a/games/index.html
+++ b/games/index.html
@@ -37,7 +37,7 @@
       </div>
       <nav>
         <div class="container"> 
-          <div class="logo"><a href=""> 
+          <div class="logo"><a href="../index.html"> 
               <h2> <span>X</span>Games</h2></a></div>
           <ul class="main-lists">
             <li></li><a href="../index.html">Home</a>
